--- a/journal/202002.md
+++ b/journal/202002.md
@@ -164,7 +164,7 @@ In February there were 4 new [proposals](https://dcrdata.decred.org/proposals) s
 
 - @Exitus' video production proposal which requested up to $2,400 per month was approved with 92.5% approval and voter participation of 24.8%.
 - @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @Checkmate's research and other activities, including helping to get some charts from his and @permabullnino's work onto dcrdata. 
-- The proposal for European marketing and events from @Haon and supported by @jholdstock, @kozel, @jazzah, @mm and @karamble initially requested $75,000 but reduced the budget to $49,000 and removed the Web Summit even in response to feedback. The proposal was rejected on Mar 3 by gaining only 38% support and voter participation of 25%.
+- The proposal for European marketing and events from @Haon and supported by @jholdstock, @kozel, @jazzah, @mm and @karamble initially requested $75,000 but reduced the budget to $49,000 and removed the Web Summit event in response to feedback. The proposal was rejected on Mar 3 by gaining only 38% support and voter participation of 25%.
 - The Russian video production proposal was rejected with 21% approval and 20% turnout.
 - The Decred Creative Economy proposal from oscargamboae was rejected with 3% approval, and becomes the first proposal to fail to meet the 20% quorum requirement, with just 15% of eligible tickets turning out to vote.
 
@@ -176,17 +176,17 @@ Hashrate: February's hashrate opened at ~427 Ph/s and closed ~356 Ph/s, bottomin
 
 Staking: 30-day average ticket price was 132.1 DCR (-6.2) per dcrstats.com as of Mar 5. The price varied between 119.8-157.9 DCR. Locked amount was 5.40-5.65 million DCR, which corresponded to 48.49-51.19% of the circulating supply.
 
-Since late Jan the amount of [staked DCR](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k38z10xk-k7kaa0dk&bin=block&axis=time) experienced a ~30-day decline from ~5.65M to ~5.40M, or ~51.5% to ~48.5% (-3%) of the circulating supply, followed by a recovery to ~50%. The ticket price went down as low as 119.8 DCR but then quickly shot up to new levels.
+Since late Jan the amount of [staked DCR](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k38z10xk-k7kaa0dk&bin=block&axis=time) experienced a ~30-day decline from approx. 5.65M to 5.40M, or 51.5% to 48.5% (-3%) of the circulating supply, followed by a recovery to ~50%. The ticket price went down as low as 119.8 DCR but then quickly shot up to new levels.
 
 Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1580515200000&to=1583020800000) there was an average of 165 public listening nodes and 341 total nodes per dcr.farm. Average version distribution for Feb: 40.8% use dcrd v1.4, 18.2% use dcrd v1.5, 9.1% use dcrd v1.5 dev and RC builds, 12.3% use dcrd v1.5.1, 4.1% use dcrd v1.6 dev builds, 4.7% use dcrwallet v1.4, 2.6% use dcrwallet v1.5, 2.1% use dcrwallet v1.5.1.
 
-The amount of mixed coins (anonymity set) reached 20% of circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These numbers were mentioned by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
+The amount of mixed coins (anonymity set) reached 20% of circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These and other metrics were published by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
 
 ## Integrations
 
-There have been a [report](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158343614832392oTHUs:decred.org) of a DCR holder taking losses to a scam Chrome extension for the Ledger wallet that asked for wallet seed. From the comments it looks like Google has removed it from the store but only after a few people got burned. Pay great attention to what software you trust the seed!
+There has been a [report](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158343614832392oTHUs:decred.org) of a DCR holder getting scammed by a Chrome extension for the Ledger wallet that asked for wallet seed. From the comments it looks like Google has removed it from the store but only after a few people got burned. Pay great attention to what software you trust the seed!
 
-OKCoin decided to [suspend](https://blog.okcoin.com/scheduled-token-suspensions/) DCR trading because of low trading volume, despite being enthusiastic about Decred initially and even hosting several joint events.
+OKCoin decided to [suspend](https://blog.okcoin.com/scheduled-token-suspensions/) DCR trading due to low trading volume, despite being enthusiastic about Decred initially and even hosting several joint events.
 
 KuCoin [announced](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) on Feb 17 that it was going to begin staking its depositors' DCR two days later, on Feb 19. KuCoin users who hold DCR on the exchange were informed that they were being opted-in automatically, and instructed to withdraw their funds immediately if they wished to opt out.
 
@@ -206,13 +206,13 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 On February 8th, Decred turned four, and the community celebrated the event with [#DecredGlobalMeetup](https://twitter.com/hashtag/DecredGlobalMeetup). Events took place in at least a dozen cities all across the world to celebrate the community and technology Decred has built. @Dustorf wrote [a blog](https://medium.com/@dlefebvr/on-saturday-february-8th-the-decred-blockchain-will-have-been-adding-blocks-for-4-years-17fe3038f3bf) and a [tweet thread](https://twitter.com/lefebvre_dustin/status/1225462426503696384) summarizing Decred's progress to date.
 
-@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) detailing all project marketing related expenses in 2019. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leveraging the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but failed. It is expected that proposals for Brazil, United States, Canada, and Australia will be made in March.
+@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) detailing all project marketing related expenses in 2019. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leverage the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but was rejected. It is expected that proposals for Brazil, United States, Canada, and Australia will be made in March.
 
-The [decred.org website](https://decred.org/) was revamped, with a new visual aesthetic, a new explainer video, and new subpages that feature Decred's history and its three tenets: Secure, Adaptable, and Sustainable. The website reflects agreed upon messaging that positions Decred as a superior store-of-value based upon those three tenets.  
+The [decred.org website](https://decred.org/) revamp was deployed in early March, with a new visual aesthetic, a new explainer video, and new subpages that feature Decred's history and its three tenets: Secure, Adaptable, and Sustainable. The website reflects agreed upon messaging that positions Decred as a superior store-of-value based upon those three tenets.
 
 Decred in Depth released two episodes in February, [Decred, an Economic Breakthrough](https://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough) with @ammarooni and [DCR in LATAM](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam) with @elian. Additionally, @mr.black worked with @Checkmate and @permabullnino to release a new, trading-focused podcast titled [Rough Consensus](https://roughconsensus.libsyn.com/rough-consensus-1-rough-start).
 
-DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all work produced by the team, of which the latest comic is explains [Lightning Network](https://twitter.com/DCRComic/status/1229792848188444672).
+DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all work produced by the team, of which the latest comic explains [Lightning Network](https://twitter.com/DCRComic/status/1229792848188444672).
 
 @Checkmate published an extremely interesting piece about the [ProgPoW debate](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) in Ethereum describing the shortcomings of Ethereum's governance system and how Decred's tools and methodologies can be employed to solve them. It is an excellent example of inserting Decred's points of differentiation into wider conversations, and was well-received by many in the Ethereum community, including [David Hoffman](https://twitter.com/TrustlessState/status/1234653059424358400), co-host of the POV Crypto podcast.
 
@@ -220,9 +220,9 @@ DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all
 
 Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, established credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/pull/8), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
 
-- An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akin's commentary on the adoption of blockchain around the world.
+- An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akinsawyerr's commentary on the adoption of blockchain around the world.
 - An [article](https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p's commentary on the centralization of Bitcion mining and consensus models.
-- An [article](https://eng.ambcrypto.com/bitcoin-building-a-nation-on-the-foundation-of-maximalism/) in AMB Crypto featuring commentary from @richardred on Bitcion building a nation.
+- An [article](https://eng.ambcrypto.com/bitcoin-building-a-nation-on-the-foundation-of-maximalism/) in AMB Crypto featuring commentary from @richardred on Bitcoin building a nation.
 
 ## Events
 
@@ -258,7 +258,7 @@ Upcoming:
 - Mar 26 - Decred Meetup - Vigo, Spain.
 - Mar 27 - Decred Meetup - Valencia, Spain.
 - Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada. @ammarooni, @michae2xl and likely also @zubair are planning on being there.
-- Apr 9 - Bitcoin Road trip - Buenos Aires, Argentina.
+- Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
 - Apr 13-17 - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Decred is a Bronze sponsor.
 - Apr 24 - Decred Meetup - La Paz, Bolivia.
 - May 6 - [Bitcoinference](https://www.eventbrite.com/e/bitcoinference-where-the-blockchain-meets-you-tickets-94598812595) - Cancún, Mexico.
@@ -274,7 +274,7 @@ Selected articles:
 - Decred, The Resilient Stronghold by @Checkmate, closing the 3 part series by looking at Bitcoin and Decred in terms of resilience, aggregate psychology, and user adoption  ([medium](https://medium.com/decred/decred-the-resilient-stronghold-4038dc64dd2a))
 - New issues of the [Decred Drive](https://medium.com/@decreddrive) continued to appear every Thursday courtesy of @DecredDragon - thanks also for your kind words about the Journal, from the team.
 - CryptoEQ gave Decred a Bronze rating, citing concerns with high USD cost to buy a ticket, relatively high inflation compared to other SoV coins, and the cost of a ticket becoming more volatile ([cryptoeq.io](https://cryptoeq.io/coreReports/decred-abridged))
-- The State of Blockchain: Experts Weigh in on Adoption Around the World by Joseph Birch - featuring @elian on Latam and @AkinSawyerr on Africa ([cointelegraph.com](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world))
+- The State of Blockchain: Experts Weigh in on Adoption Around the World by Joseph Birch - featuring @elian on Latam and @akinsawyerr on Africa ([cointelegraph.com](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world))
 - After Four Years, is Decred Better than Bitcoin Yet? by Liam Kelly ([cryptobriefing.com](https://cryptobriefing.com/after-four-years-is-decred-better-bitcoin-yet/))
 
 Translations:
@@ -297,7 +297,7 @@ Audio:
 
 Comm systems news:
 
-- The Slack bridge to Matrix and Discord was decommissioned on Feb 28 and most of the channels shuttered. Factors that contributed to the decision include the disrupting locking down of automatic invites in 2018, DMs and other history disappearing after about a week, and migration of most active moderators to Matrix. Those who wished to continue following and participating in the chats moved to Matrix and Discord, to the rest we say a fond farewell.
+- The Slack bridge to Matrix and Discord was decommissioned on Feb 28 and most of the channels shuttered. Issues that led to this decision include the disruptive shutdown of automatic invites in 2018, DMs and other history disappearing after about a week, and migration of most active moderators to Matrix. Those who wished to continue following and participating in the chats moved to Matrix and Discord, to the rest we say a fond farewell.
 - @Exitus purged inactive accounts from Discord, cementing his iron grip on power among the denizens of Decred Discord. The pruning removed accounts that were not verified and had not logged on in over 30 days. Any account removed is free to re-join and go through the verification process.
 
 Selected Reddit posts:
@@ -308,10 +308,10 @@ Selected Reddit posts:
 Selected Twitter discussions:
 
 - @Exitus identified and extracted a [clip](https://twitter.com/coveryfire7777/status/1229517588138528768) from an Ark Invest video, where Cathie Wood mentions Decred as "promising".
-- @degeri [shared](https://twitter.com/degeri_crypto/status/1233658256737918976) a screengrab from Altered Carbon Season 2 Episode 5, where prices are quoted on screen in a range of cryptocurrencies, including Decred. DCR is the only currency shown with two numbers, and this cued speculation about what that meant for the interpretation of this year 2400 DCR price prediction.
+- @degeri [shared](https://twitter.com/degeri_crypto/status/1233658256737918976) a screengrab from Altered Carbon Season 2 Episode 5, where prices are quoted on screen in a range of cryptocurrencies, including Decred. DCR is the only currency shown with two numbers, and this cued speculation about what that meant for the interpretation of this year 2400 price prediction for DCR.
 - @jy-p is back on twitter after a long hiatus, and he's [wondering](https://twitter.com/behindtext/status/1232381271252271104) what people who work on cc projects and aren't actively engineering out oracles are doing.
 - @richardred [thread](https://twitter.com/RichardRed0x/status/1231223498787508224) about Decred DAO, prompted by a [response](https://medium.com/@rzs/im-continually-amazed-at-the-lack-of-attention-decred-gets-4a40679246ba) on Medium asking why Decred was not featured in a DAO [update](https://medium.com/@rebeccarachmany/dao-falloff-and-revival-2cf74f3c18c1).
-- DCRComic [DCR Time](https://twitter.com/DCRComic/status/1232714622819602432) artwork.
+- [DCR Time](https://twitter.com/DCRComic/status/1232714622819602432) artwork by DCR Comic.
 - Chris Burniske with a nice Joel Monegro [quote](https://twitter.com/cburniske/status/1227617853211336704) from his Sovereign Cryptonetworks paper, about Decred being set up for long-term sovereignty thanks to its decentralized governance principles.
 - @Checkmate sums up the [Treasury](https://twitter.com/_Checkmatey_/status/1224764330878603266) as the beating heart of the Decred project.
 
