--- a/journal/202002.md
+++ b/journal/202002.md
@@ -163,7 +163,7 @@ Our Network [issue 6](https://ournetwork.substack.com/p/our-network-issue-6) had
 In February there were 4 new [proposals](https://dcrdata.decred.org/proposals) submitted, and 5 started voting.
 
 - @Exitus' video production proposal which requested up to $2,400 per month was approved with 92.5% approval and voter participation of 24.8%.
-- @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @Checkmate's research and other activities, including helping to get some charts from his and @permabullnino's work onto dcrdata. 
+- @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @Checkmate's research and other activities, including helping to get some charts from his and @permabullnino's work onto dcrdata.
 - The proposal for European marketing and events from @Haon and supported by @jholdstock, @kozel, @jazzah, @mm and @karamble initially requested $75,000 but reduced the budget to $49,000 and removed the Web Summit event in response to feedback. The proposal was rejected on Mar 3 by gaining only 38% support and voter participation of 25%.
 - The Russian video production proposal was rejected with 21% approval and 20% turnout.
 - The Decred Creative Economy proposal from oscargamboae was rejected with 3% approval, and becomes the first proposal to fail to meet the 20% quorum requirement, with just 15% of eligible tickets turning out to vote.
@@ -172,7 +172,7 @@ For more detail on the month's Politeia activity see Politeia Digest [issue 27](
 
 ## Network
 
-Hashrate: February's hashrate opened at ~427 Ph/s and closed ~356 Ph/s, bottoming at 263 Ph/s and peaking at 578 Ph/s throughout the month. Pool hashrate distribution as of Mar 1: Poolin 32%, UUPool 27%, lab.antpool.com 12%, BTC.com 1.7%, F2Pool 1.5%, Luxor 1.3%,  BeePool 0.1%, CoinMine 0.02% and others ~24% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: February's hashrate opened at ~427 Ph/s and closed ~356 Ph/s, bottoming at 263 Ph/s and peaking at 578 Ph/s throughout the month. Pool hashrate distribution as of Mar 1: Poolin 32%, UUPool 27%, lab.antpool.com 12%, BTC.com 1.7%, F2Pool 1.5%, Luxor 1.3%, BeePool 0.1%, CoinMine 0.02% and others ~24% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
 Staking: 30-day average ticket price was 132.1 DCR (-6.2) per dcrstats.com as of Mar 5. The price varied between 119.8-157.9 DCR. Locked amount was 5.40-5.65 million DCR, which corresponded to 48.49-51.19% of the circulating supply.
 
@@ -192,7 +192,7 @@ KuCoin [announced](https://www.kucoin.com/news/en-decred-soft-staking-official-r
 
 > KuCoin will adjust the staking proportion of Decred every calendar day and calculate the daily revenue of the users (...) Users have to take note that due to the participation of the Program, there will be a potential risk that a user may not be able to withdraw his/her designated Decred in a timely manner or as he/she so expected although KuCoin will use its best efforts to avoid such inevitably delay.
 
-As the staked DCR will be time-locked, KuCoin's capacity to provide it to depositors will depend on enough of their tickets voting, to free up the deposited DCR so that they can process withdrawals. 
+As the staked DCR will be time-locked, KuCoin's capacity to provide it to depositors will depend on enough of their tickets voting, to free up the deposited DCR so that they can process withdrawals.
 
 > A Separate Project: The Service provided by KuCoin herein will only affect the Decred withdrawal, and will not directly or indirectly affect: (1) the trading of Decred assets on our platform; and (2) the trading or withdrawal of any other digital asset on our platform. As such, in the event that any user is reluctant to follow the withdrawal sequence but are already lined up in the withdrawal queue, the said user may choose to exchange Decred with other tokens, and withdraw the exchanged tokens immediately.
 
@@ -271,7 +271,7 @@ Selected articles:
 - Decred 2019 Marketing Report by @Dustorf gives an account of 2019's marketing effort, in which 785K USD was spent (similar to the previous year). The report also has thoughtful reflections on how to evolve and decentralize the project's marketing effort. ([blog.decred.org](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/))
 - Decred On-Chain: Ticket Funding Rates by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-ticket-funding-rates-4e7233c7b64f))
 - Decred On-Chain: Macro + Micro Outlook by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-macro-micro-outlook-12a26930623e))
-- Decred, The Resilient Stronghold by @Checkmate, closing the 3 part series by looking at Bitcoin and Decred in terms of resilience, aggregate psychology, and user adoption  ([medium](https://medium.com/decred/decred-the-resilient-stronghold-4038dc64dd2a))
+- Decred, The Resilient Stronghold by @Checkmate, closing the 3 part series by looking at Bitcoin and Decred in terms of resilience, aggregate psychology, and user adoption ([medium](https://medium.com/decred/decred-the-resilient-stronghold-4038dc64dd2a))
 - New issues of the [Decred Drive](https://medium.com/@decreddrive) continued to appear every Thursday courtesy of @DecredDragon - thanks also for your kind words about the Journal, from the team.
 - CryptoEQ gave Decred a Bronze rating, citing concerns with high USD cost to buy a ticket, relatively high inflation compared to other SoV coins, and the cost of a ticket becoming more volatile ([cryptoeq.io](https://cryptoeq.io/coreReports/decred-abridged))
 - The State of Blockchain: Experts Weigh in on Adoption Around the World by Joseph Birch - featuring @elian on Latam and @akinsawyerr on Africa ([cointelegraph.com](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world))
@@ -327,7 +327,7 @@ There are indications of significant [strife](https://decrypt.co/19769/zaki-mani
 
 Block.one CEO Brendan Blumer [woke](https://twitter.com/BrendanBlumer/status/1232318319061061632) up to find that the rules of the EOS network had been changed overnight, with 15 BPs proposing and passing the change to reduce issuance from 5% to 1%. That it happened is not exactly a surprise, because at no point has any significant effort been put into developing the planned "Worker Proposal System" described in the white paper. The unused 4% has been building up in an unused address, and the accumulated EOS has already been burned once. Why the WPF fund was finally shut down on this particular night 18 months later is a mystery that only the 15 EOS BPs involved know the answer to. Nobody even gave Brendan a heads up! He's fine with it though, rules changing overnight is how decentralized governance works when there are only 15 parties involved.
 
-The Bitcoin ABC developers have [released](https://www.bitcoinabc.org/2020-02-15-miner-fund/) details of their plan to implement a variant of the block reward funding proposed by Jiang Zhuoer of BTC.TOP. This implementation will alter the following details of the plan: amount reduced to 5%, funds can go to any whitelisted project, and the plan will only go into effect if triggered by miners via BIP9. There remains considerable [opposition](https://twitter.com/PeterRizun/status/1228787028734574592) to the idea of any developer funding from the BCH block reward. 
+The Bitcoin ABC developers have [released](https://www.bitcoinabc.org/2020-02-15-miner-fund/) details of their plan to implement a variant of the block reward funding proposed by Jiang Zhuoer of BTC.TOP. This implementation will alter the following details of the plan: amount reduced to 5%, funds can go to any whitelisted project, and the plan will only go into effect if triggered by miners via BIP9. There remains considerable [opposition](https://twitter.com/PeterRizun/status/1228787028734574592) to the idea of any developer funding from the BCH block reward.
 
 Binance has been engaged in a [dispute](https://cointelegraph.com/news/binance-returns-frozen-btc-after-user-promises-not-to-use-coinjoin) with one of its users who had used the Wasabi wallet to CoinJoin mix their transactions and enhance their privacy. The mixing activity elevated the user's risk score and their funds were frozen while Binance investigated. Eventually the user agreed to withdraw their funds, which were not welcomed by Binance, who referenced compliance with Singapore law to explain their actions. So far there have been no reports of DCR mixers being flagged in this way.
 
@@ -337,13 +337,13 @@ Blockstream are getting into banking, being named as a strategic technology part
 
 Casa is winding [down](https://www.coindesk.com/bitcoin-startup-casa-names-new-ceo-as-node-service-goes-open-source) its node hardware product, of which it has sold 2,000 units, and also [open](https://blog.keys.casa/open-sourcing-the-casa-node/) sourcing its code. Casa will focus on its $10/month subscription service for key management.
 
-Justin Sun of Tron had a busy month, [buying](https://news.bitcoin.com/steemit-for-sale-tron/) the content website steemit.com which is built on (and the main use of) the Steem blockchain and immediately announcing that steemit.com would be moving to the Tron blockchain. This led the Steem witnesses (block producers) to enact a soft [fork](https://www.coindesk.com/justin-sun-bought-steemit-steem-moved-to-limit-his-power) which would freeze the "Steemit Inc ninja-mined stake”, an unknown large quantity of STEEM held in a number of accounts by the company. On Mar 1, Justin [struck](https://www.coindesk.com/steem-community-mobilizes-popular-vote-in-battle-with-justin-sun) back by recruiting exchanges (Binance and Huobi) to vote for a set of witnesses under his control that would revert the soft fork and free the Steemit STEEM. After backlash from users it appeared that both [Binance](https://twitter.com/cz_binance/status/1234676941111742467) and [Huobi](https://medium.com/huobi-global/community-counts-a-letter-to-the-steem-community-340881448ea7) were going to unstake their STEEM and pull out of whatever arrangement they had with Sun. 
+Justin Sun of Tron had a busy month, [buying](https://news.bitcoin.com/steemit-for-sale-tron/) the content website steemit.com which is built on (and the main use of) the Steem blockchain and immediately announcing that steemit.com would be moving to the Tron blockchain. This led the Steem witnesses (block producers) to enact a soft [fork](https://www.coindesk.com/justin-sun-bought-steemit-steem-moved-to-limit-his-power) which would freeze the "Steemit Inc ninja-mined stake", an unknown large quantity of STEEM held in a number of accounts by the company. On Mar 1, Justin [struck](https://www.coindesk.com/steem-community-mobilizes-popular-vote-in-battle-with-justin-sun) back by recruiting exchanges (Binance and Huobi) to vote for a set of witnesses under his control that would revert the soft fork and free the Steemit STEEM. After backlash from users it appeared that both [Binance](https://twitter.com/cz_binance/status/1234676941111742467) and [Huobi](https://medium.com/huobi-global/community-counts-a-letter-to-the-steem-community-340881448ea7) were going to unstake their STEEM and pull out of whatever arrangement they had with Sun.
 
 There has also been some [suggestion](https://bitcoinexchangeguide.com/did-justin-sun-rig-super-rep-election-two-tron-dapps-received-votes-from-zion-account/) that Justin Sun used votes from the "Zion" account to interfere with community voting - which he [appeared](https://twitter.com/justinsuntron/status/1230215220884201472) to confirm, stating that it was temporary until 3 super representatives upgrade their software, to "prevent them from harming the network".
 
 IOTA's coordinator was turned off, [pausing](https://bitcoinist.com/iota-trinity-wallet-vulnerability-1-6-million-stolen/) the network, on Feb 13, to investigate claims of Trinity wallet thefts totalling $1.6 million. IOTA entered a state of elevated calamity when, after several days of down-time with the coordinator switched off, it was [revealed](https://blog.iota.org/trinity-attack-incident-part-1-summary-and-next-steps-8c7ccc4d81e8) that all the private keys of all users of the desktop Trinity client (maintained by the IOTA Foundation) had been compromised. 8.55 Ti of IOTA has been stolen, worth about $2.3 million at the time. Trinity was compromised by malicious code inserted in a 3rd party dependency of the MoonPay service that enabled users to buy IOTA tokens directly within Trinity. The [latest](https://cointelegraph.com/news/iota-prepares-to-relaunch-network-in-one-week) is that there is a fixed version of Trinity and a seed migration tool and IOTA holders have 7 days to undergo the transfer procedure before the foundation re-starts the network between Mar 7 and Mar 10. IOTA has lost 30% of its value in USD terms at time of writing (Mar 5), but users who hold their own IOTA have been unable to move them since the network was paused.
 
-Aragon Court [launched](https://blog.aragon.org/launching-aragon-court/), aiming to provide a digital jurisdiction for DAOs to operate in. In Aragon Court disputes are resolved by jurors who stake ANJ tokens and try to guess the decision that the majority of jurors will choose. 247 jurors signed up for the launch by collectively staking 1 million ANT (worth ~$1.3 million). To start with jurors are completing a "[precedence campaign](https://blog.aragon.org/precedence-campaign-primer/)" (juror training exercise) with [mock](https://twitter.com/Yazanator/status/1228752714873462784) disputes. 
+Aragon Court [launched](https://blog.aragon.org/launching-aragon-court/), aiming to provide a digital jurisdiction for DAOs to operate in. In Aragon Court disputes are resolved by jurors who stake ANJ tokens and try to guess the decision that the majority of jurors will choose. 247 jurors signed up for the launch by collectively staking 1 million ANT (worth ~$1.3 million). To start with jurors are completing a "[precedence campaign](https://blog.aragon.org/precedence-campaign-primer/)" (juror training exercise) with [mock](https://twitter.com/Yazanator/status/1228752714873462784) disputes.
 
 DeFi project bZx has been at the center of a number of [stories](https://www.coindesk.com/everything-you-ever-wanted-to-know-about-the-defi-flash-loan-attack) about exploits this month, with its new "flash loan" feature being used in creative ways to set up series of transactions that manipulated price oracles and immediately profited from them. The novel aspect of these exploits is that the transactions are all processed in the same block, either there is a profit for the attacker or the transaction is not valid - making it very low risk for the attacker as they are not required to provide collateral. After the exploit, the master key was used to edit the smart contracts so that they could not be executed the same way.
 
