Update from guisso

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -78,8 +78,6 @@ Frontend changes:
 
 [dcrlnd](https://github.com/decred/dcrlnd): Huge [porting](https://github.com/decred/dcrlnd/pull/74) effort of upstream changes up to the [v0.9.0-beta](https://github.com/lightningnetwork/lnd/releases/tag/v0.9.0-beta) release is complete.
 
-Now the default build set all RPCs packages. [Build flags](https://github.com/decred/dcrlnd/pull/77)
-
 [cspp](https://github.com/decred/cspp): Multiple fixes and improved error handling.
 
 [dcrdex](https://github.com/decred/dcrdex): Development highlights:
@@ -259,7 +257,7 @@ Upcoming:
 - Mar 24 - Decred Meetup - Madrid, Spain.
 - Mar 26 - Decred Meetup - Vigo, Spain.
 - Mar 27 - Decred Meetup - Valencia, Spain.
-- Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. @guisso will present on how it was to implement a test environment of DCRLND with docker-compose.
+- Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. @guisso will present on how it was to implement a test environment for dcrlnd with docker-compose.
 - Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada. @ammarooni, @michae2xl and likely also @zubair are planning on being there.
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
 - Apr 13-17 - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Decred is a Bronze sponsor.
@@ -364,6 +362,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, Dustorf, l1ndseymm, richardred, guisso
+- writing and editing: bee, degeri, Dustorf, guisso, l1ndseymm, richardred
 - reviews and feedback: ay-p, dnldd, jholdstock, lukebp, matheusd, raedah
 - title image: {}
