--- a/journal/202002.md
+++ b/journal/202002.md
@@ -14,7 +14,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Upgrade Notice
 
-Consensus vote to enable DCP-0005 has passed and is [expected](https://voting.decred.org/) to activate around Mar 13. Please take time to [upgrade](https://decred.org/wallets/) your software to stay connected with the network.
+Consensus vote to enable DCP-0005 has passed and is [expected](https://voting.decred.org/) to activate around Mar 13. Please take the time to [upgrade](https://decred.org/wallets/) your software to stay connected with the network.
 
 ## Development
 
@@ -108,7 +108,7 @@ In development:
 
 [dcrdata](https://github.com/decred/dcrdata):
 
-- attack cost estimation page finally [merged](https://github.com/decred/dcrdata/pull/1664). Work on this started 6 months ago by Raedah Group with primary contributions by @ademuanthony and @dmigwi, and using models from @zubair. The page is available for public testing [here](https://explorer.planetdecred.org/attack-cost).
+- attack cost estimation page finally [merged](https://github.com/decred/dcrdata/pull/1664). Work on this started 6 months ago by Raedah Group with primary contributions by @ademuanthony and @dmigwi using models from @zubair. The page is available for public testing [here](https://explorer.planetdecred.org/attack-cost).
 - new [charts](https://github.com/decred/dcrdata/pull/1640) for mixed coins (see Network section)
 - [smooth mode](https://github.com/decred/dcrdata/pull/1678) for ticket charts
 - bug fixes and UI tweaks
@@ -130,7 +130,7 @@ In development:
 Other:
 
 - Bug Bounty program posted an [update](https://bounty.decred.org/2020/02/status-update/): 97 submissions processed so far (+14 since Oct update), with 11 being eligible for a payout (+1).
-- Developers looking how to start contributing can follow the [@dcrgoodfirst](https://twitter.com/dcrgoodfirst) Twitter account.
+- Developers looking at how to start contributing can follow the [@dcrgoodfirst](https://twitter.com/dcrgoodfirst) Twitter account.
 
 Dev activity stats for February: 309 active PRs, 274 master commits, 52K added and 28K deleted lines spread across 20 repositories. Contributions came from 2-6 developers per repository.
 
@@ -166,7 +166,7 @@ In February there were 4 new [proposals](https://dcrdata.decred.org/proposals) s
 - @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @Checkmate's research and other activities, including helping to get some charts from his and @permabullnino's work onto dcrdata.
 - The proposal for European marketing and events from @Haon and supported by @jholdstock, @kozel, @jazzah, @mm and @karamble initially requested $75,000 but reduced the budget to $49,000 and removed the Web Summit event in response to feedback. The proposal was rejected on Mar 3, gaining only 38% support, with voter participation of 25%.
 - The Russian video production proposal was rejected with 21% approval and 20% turnout.
-- The Decred Creative Economy proposal from oscargamboae was rejected with 3% approval, and becomes the first proposal to fail to meet the 20% quorum requirement, with just 15% of eligible tickets turning out to vote.
+- The Decred Creative Economy proposal from oscargamboae was rejected with 3% approval and became the first proposal to fail to meet the 20% quorum requirement, with just 15% of eligible tickets turning out to vote.
 
 For more detail on the month's Politeia activity see Politeia Digest [issue 27](https://blockcommons.red/politeia-digest/issue027/) and [issue 28](https://blockcommons.red/politeia-digest/issue028/).
 
@@ -180,7 +180,7 @@ Since late Jan the amount of [staked DCR](https://explorer.dcrdata.org/charts?ch
 
 Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1580515200000&to=1583020800000) there was an average of 165 public listening nodes and 341 total nodes per dcr.farm. Average version distribution for Feb: 40.8% use dcrd v1.4, 18.2% use dcrd v1.5, 9.1% use dcrd v1.5 dev and RC builds, 12.3% use dcrd v1.5.1, 4.1% use dcrd v1.6 dev builds, 4.7% use dcrwallet v1.4, 2.6% use dcrwallet v1.5, 2.1% use dcrwallet v1.5.1.
 
-The amount of mixed coins (anonymity set) reached 20% of circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These and other metrics were published by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
+The amount of mixed coins (anonymity set) reached 20% of the circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These and other metrics were published by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
 
 ## Integrations
 
@@ -221,7 +221,7 @@ DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all
 Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/pull/8), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
 
 - An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akinsawyerr's commentary on the adoption of blockchain around the world.
-- An [article](https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p's commentary on the centralization of Bitcion mining and consensus models.
+- An [article](https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p's commentary on the centralization of Bitcoin mining and consensus models.
 - An [article](https://eng.ambcrypto.com/bitcoin-building-a-nation-on-the-foundation-of-maximalism/) in AMB Crypto featuring commentary from @richardred on Bitcoin building a nation.
 
 ## Events
@@ -330,11 +330,11 @@ Block.one CEO Brendan Blumer [woke](https://twitter.com/BrendanBlumer/status/123
 
 The Bitcoin ABC developers have [released](https://www.bitcoinabc.org/2020-02-15-miner-fund/) details of their plan to implement a variant of the block reward funding proposed by Jiang Zhuoer of BTC.TOP. This implementation will alter the following details of the plan: amount reduced to 5%, funds can go to any whitelisted project, and the plan will only go into effect if triggered by miners via BIP9. There remains considerable [opposition](https://twitter.com/PeterRizun/status/1228787028734574592) to the idea of any developer funding from the BCH block reward.
 
-Binance has been engaged in a [dispute](https://cointelegraph.com/news/binance-returns-frozen-btc-after-user-promises-not-to-use-coinjoin) with one of its users who had used the Wasabi wallet to CoinJoin mix their transactions and enhance their privacy. The mixing activity elevated the user's risk score and their funds were frozen while Binance investigated. Eventually the user agreed to withdraw their funds, which were not welcomed by Binance, who referenced compliance with Singapore law to explain their actions. The used had to promise not to mix their coins any more before Binance would return them! So far there have been no reports of DCR mixers being flagged in this way.
+Binance has been engaged in a [dispute](https://cointelegraph.com/news/binance-returns-frozen-btc-after-user-promises-not-to-use-coinjoin) with one of its users who had used the Wasabi wallet to CoinJoin mix their transactions and enhance their privacy. The mixing activity elevated the user's risk score and their funds were frozen while Binance investigated. Eventually the user agreed to withdraw their funds, which were not welcomed by Binance, who referenced compliance with Singapore law to explain their actions. The user had to promise not to mix their coins any more before Binance would return them! So far there have been no reports of DCR mixers being flagged in this way.
 
 The privacy implications of Ethereum Name Service (.ens) domains were considered by Tim Copeland in an [article](https://decrypt.co/19423/we-tracked-133000-ethereum-names-and-exposed-their-secrets) in Decrypt. Although many users were aware that they could damage their privacy by linking their domain address to their other addresses, the transaction they used to pay for their .ens could also be used to link them to their funds.
 
-Blockstream are getting into banking, being named as a strategic technology partner of Avanti Financial Group, a [new](https://avantibank.com/) US bank dedicated to digital assets - [covered](https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/) by CoinSpice (with spicy illustrations). Terms were not disclosed.
+Blockstream is getting into banking, being named as a strategic technology partner of Avanti Financial Group, a [new](https://avantibank.com/) US bank dedicated to digital assets - [covered](https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/) by CoinSpice (with spicy illustrations). Terms were not disclosed.
 
 Casa is winding [down](https://www.coindesk.com/bitcoin-startup-casa-names-new-ceo-as-node-service-goes-open-source) its node hardware product, of which it has sold 2,000 units, and also [open](https://blog.keys.casa/open-sourcing-the-casa-node/) sourcing its code. Casa will focus on its $10/month subscription service for key management.
 
@@ -352,7 +352,7 @@ DeFi project bZx has been at the center of a number of [stories](https://www.coi
 
 Another group came [forward](https://medium.com/@1inch.exchange/yes-we-hacked-bzx-fulcrum-but-one-month-ago-3f7e5c437ee3) to say they had warned bZx about a different issue a month earlier and were not impressed with their response, including refusing to pay a reasonable bounty based on a technicality.
 
-12 exchanges were hacked in 2019 for a total damange of almost $300 million and 510,000 user logins, according to a January [report](https://cointelegraph.com/news/most-significant-hacks-of-2019-new-record-of-twelve-in-one-year) by Cointelegraph. This serves as a reminder to be cautious when selecting an exchange to send coins or sensitive documents to.
+12 exchanges were hacked in 2019 for a total damage of almost $300 million and 510,000 user logins, according to a January [report](https://cointelegraph.com/news/most-significant-hacks-of-2019-new-record-of-twelve-in-one-year) by Cointelegraph. This serves as a reminder to be cautious when selecting an exchange to send coins or sensitive documents to.
 
 ## About This Issue
 
