Dev feedback from chappjc

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -82,17 +82,17 @@ Frontend changes:
 
 [dcrdex](https://github.com/decred/dcrdex): Development highlights:
 
-- client [RPC server](https://github.com/decred/dcrdex/pull/133)
-- password-based client [key encryption](https://github.com/decred/dcrdex/pull/155)
-- client [epoch queue](https://github.com/decred/dcrdex/pull/143)
-- [logging in](https://github.com/decred/dcrdex/pull/153) to the client with an app-wide password
-- [implemented](https://github.com/decred/dcrdex/pull/145) a less gameable deterministic order matching [algorithm](https://github.com/decred/dcrdex/issues/67) (spec change [here](https://github.com/decred/dcrdex/pull/83))
+- client [RPC server](https://github.com/decred/dcrdex/pull/133) for command line / script client control
+- password-based [key encryption](https://github.com/decred/dcrdex/pull/155) package for secret storage
+- client-side [epoch order queue](https://github.com/decred/dcrdex/pull/143) and shuffle validation
+- client [login](https://github.com/decred/dcrdex/pull/153) and connect functionality, using an app-wide password
+- [implemented](https://github.com/decred/dcrdex/pull/145) a less gameable deterministic order matching [algorithm](https://github.com/decred/dcrdex/issues/67) where epoch queue is shuffled based on client cryptographic commitments, with preimages revealed to the matching engine on epoch close (spec change [here](https://github.com/decred/dcrdex/pull/83))
 - added [wallets](https://github.com/decred/dcrdex/pull/176) page in browser-based client GUI allowing to create and control exchange wallets
 - client database [backup](https://github.com/decred/dcrdex/pull/183)
-- store all match/swap data in server [database](https://github.com/decred/dcrdex/pull/177)
+- store all match/swap data in server [database](https://github.com/decred/dcrdex/pull/177) to allow the server to prove receipt of swap-related messages from clients
 - updated build and contributing [instructions](https://github.com/decred/dcrdex/pull/175)
 
-A total of 25 pull requests merged from 7 contributors adding 12K and deleting 3K lines of code.
+A total of 25 pull requests merged from 7 contributors adding 12K and deleting 3K lines of code ([commit summary](https://github.com/decred/dcrdex/compare/15d3021da853110baa02b24311b03e457b61be4a...94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d)).
 
 [dcrandroid](https://github.com/decred/dcrandroid): Version 1.0.1 released on Google Play fixes several bugs and includes v1.5 modules to support the new consensus rules.
 
@@ -108,8 +108,8 @@ In development:
 
 [dcrdata](https://github.com/decred/dcrdata):
 
-- attack cost estimation page finally [merged](https://github.com/decred/dcrdata/pull/1664). Work on this started 6 months ago by Raedah Group with primary contributions by @ademuanthony and @dmigwi using models from @zubair. The page is available for public testing [here](https://explorer.planetdecred.org/attack-cost).
-- new [charts](https://github.com/decred/dcrdata/pull/1640) for mixed coins (see Network section)
+- attack cost estimation page finally [merged](https://github.com/decred/dcrdata/pull/1664). Work on this started 6 months ago by Raedah Group with primary contributions by @ademuanthony and @dmigwi using models from @zubair. The page is available for public testing [here](https://alpha.dcrdata.org/attack-cost).
+- new [charts](https://github.com/decred/dcrdata/pull/1640) for [Mixed Coins](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) and [Privacy Participation](https://alpha.dcrdata.org/charts?chart=privacy-participation)
 - [smooth mode](https://github.com/decred/dcrdata/pull/1678) for ticket charts
 - bug fixes and UI tweaks
 
@@ -180,7 +180,7 @@ Since late Jan the amount of [staked DCR](https://explorer.dcrdata.org/charts?ch
 
 Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1580515200000&to=1583020800000) there was an average of 165 public listening nodes and 341 total nodes per dcr.farm. Average version distribution for Feb: 40.8% use dcrd v1.4, 18.2% use dcrd v1.5, 9.1% use dcrd v1.5 dev and RC builds, 12.3% use dcrd v1.5.1, 4.1% use dcrd v1.6 dev builds, 4.7% use dcrwallet v1.4, 2.6% use dcrwallet v1.5, 2.1% use dcrwallet v1.5.1.
 
-The amount of mixed coins (anonymity set) reached 20% of the circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These and other metrics were published by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
+The amount of mixed coins (anonymity set) reached 20% of the circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These and other metrics were published by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation) mixed by day and by block.
 
 ## Integrations
 
@@ -366,5 +366,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Dustorf, guisso, l1ndseymm, richardred
-- reviews and feedback: ay-p, dnldd, jholdstock, lukebp, matheusd, raedah
+- reviews and feedback: ay-p, chappjc, dnldd, jholdstock, lukebp, matheusd, raedah
 - title image: {}
